fixing issues of admin dashboard