@@ -4,10 +4,12 @@ import com.pio.foodiepanda.dto.CustomerDTO;
 import com.pio.foodiepanda.model.Customer;
 import com.pio.foodiepanda.repository.CustomerRepository;
 import com.pio.foodiepanda.service.CustomerService;
+import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class CustomerServiceImpl implements CustomerService {
@@ -17,12 +19,9 @@ public class CustomerServiceImpl implements CustomerService {
     @Override
     public List<CustomerDTO> getAll() {
         List<Customer> customers = customerRepository.findAll();
-        return customers.stream().map(customer -> {
-            CustomerDTO customerDTO = new CustomerDTO();
-            customerDTO.setFirstName(customer.getFirstName());
-            customerDTO.setLastName(customer.getLastName());
-            customerDTO.setPhoneNumber(customer.getPhoneNumber());
-            return customerDTO;
-        }).toList();
+        ModelMapper modelMapper = new ModelMapper();
+        return customers.stream()
+                .map(customer -> modelMapper.map(customer, CustomerDTO.class))
+                .collect(Collectors.toList());
     }
 }
